<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Astro</string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="refresh">Refresh frequency: </string>
    <string name="settings">Settings</string>
    <string name="astro">Astro</string>
    <string name="forecast">Forecast</string>
    <string name="refreshed">Refreshed</string>
    <string name="ok">OK</string>

    <string name="sun">Sun</string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">Sunset: </string>
    <string name="sunrise_azimuth">Sunrise azimuth: </string>
    <string name="sunset_azimuth">Sunset azimuth: </string>
    <string name="twilight">Twilight: </string>
    <string name="dawn">Dawn: </string>

    <string name="moon">Moon</string>
    <string name="moonrise">Moonrise: </string>
    <string name="moonset">Moonset: </string>
    <string name="new_moon">New moon: </string>
    <string name="full_moon">Full moon: </string>
    <string name="faze">Faze: </string>
    <string name="lunar_day">Lunar day: </string>

    <string name="basic_information">BASIC INFORMATION</string>
    <string name="location">Location:</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="description">Description:</string>

    <string name="additional_information">ADDITIONAL INFORMATION</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_direction">Wind direction:</string>
    <string name="humidity">Humidity:</string>
    <string name="visibility">Visibility:</string>

    <string name="type_localization">Type localization</string>
    <string name="add_localization">Add localization</string>

    <string name="imperial_system">Imperial system</string>
    <string name="metric_system">Metric system</string>

    <string name="localization_not_found">Localization not found</string>
</resources>
