<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:labelFor="@+id/latitude"
        android:text="@string/latitude"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:labelFor="@+id/longitude"
        android:text="@string/longitude"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="numberDecimal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:labelFor="@+id/frequency"
        android:text="@string/refresh"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="number" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ok"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>