<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:orientation="vertical"
    android:weightSum="11">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:contentDescription="@string/sun"
        android:src="@drawable/sun" />

    <TextClock
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@color/clockDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/longitude"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/latitude"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sunrise"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SunriseTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sunrise_azimuth"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SunriseAzimuth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sunset"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SunsetTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sunset_azimuth"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SunsetAzimuth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/twilight"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TwilightTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/dawn"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DawnTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/fontDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>